# cen429-2025-2026-5-mustafa-guneyli-cpp

./: 7-build-app-linux.sh  7-build-app-windows.bat  7-build-doc-windows.bat  8-build-test-windows.bat  9-clean-configure-app-windows.bat  9-clean-project.bat  CMakeLists.txt  DATA_SECURITY_FINAL_REPORT.md  DoxyfileLibLinux  DoxyfileLibWin  DoxyfileTestLinux  DoxyfileTestWin  README.md  SECURITY_README.md  mkdocs.yml  personal_finance.db  setup-cmake-path.bat
.github/workflows/: cpp.yml
docs/: DATA_SECURITY_IMPLEMENTATION.md  DATA_SECURITY_MODULE_USAGE.md  index.md
report_doc_lib_hist_linux/: 2023-10-28_20-28-59_CoverageHistory.xml  2023-10-28_20-32-34_CoverageHistory.xml  2023-10-28_20-36-22_CoverageHistory.xml
report_doc_lib_hist_win/: 2023-10-28_19-30-26_CoverageHistory.xml
report_doc_test_hist_linux/: 2023-10-28_20-29-30_CoverageHistory.xml  2023-10-28_20-33-06_CoverageHistory.xml  2023-10-28_20-36-53_CoverageHistory.xml
report_doc_test_hist_win/: 2023-10-28_19-30-27_CoverageHistory.xml
report_test_hist_win/: 2023-10-28_19-31-41_CoverageHistory.xml
src/: namespaces.dox
src/personal/: CMakeLists.txt
src/personal-financeapp/: CMakeLists.txt
src/personal-financeapp/header/: personal-financeapp.h
src/personal-financeapp/src/: personal-financeapp.cpp
src/personal/header/: code_hardening.hpp  data_security.hpp  database.h  fallback_sha256.hpp  personal.h  rasp_expected_checksum.h  rasp_protection.hpp
src/personal/src/: code_hardening.cpp  data_security.cpp  database.cpp  personal.cpp  rasp_protection.cpp
src/personal_finance/: CMakeLists.txt
src/personal_finance/header/: personal-finance.h
src/personal_finance/src/: personal-finance.cpp
src/personal_financeapp/: CMakeLists.txt
src/personalapp/: CMakeLists.txt
src/personalapp/header/: personalapp.h
src/personalapp/src/: personalapp.cpp
src/sqlite3/: CMakeLists.txt  download-sqlite.bat
src/tests/: CMakeLists.txt
src/tests/personal/: personal_test.cpp
src/tests/personal-finance/: CMakeLists.txt  personal-finance_test.cpp
src/tests/utility/: utility_test.cpp
src/utility/: CMakeLists.txt  data_integrity.h  encryption.h  secure_string.h
src/utility/header/: mathUtility.h
src/utility/src/: mathUtility.cpp
